# gmtk-2025

./: Cargo.toml  README.md  rustfmt.toml
examples/: bloom_circle_with_movement.rs  button_with_loop_counter.rs  clap.rs
src/: main.rs
