[package]
name = "gmtk-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", features = [ "wayland" ] }

[target.x86_64-pc-windows-msvc.dependencies]
# https://bevy-cheatbook.github.io/setup/cross/linux-windows.html#bevy-caveats
# So we don't need `CARGO_FEATURE_PURE=1` when building for windows.
blake3 = { version = "1.5", features = [ "pure" ] }
